# mtr-chatbot

./: .dockerignore  .gitignore  Dockerfile  Document_Processing_Guide.md  README.md  config.py  docker-compose.cpu.yml  docker-compose.yml  docker-compose.ymltab  nginx.conf  pyproject.toml  requirements.txt  run_chunk_viewer.py  run_chunk_viewer_flask.py
.data/result/manual/: manual copy.md  manual.xml  manual_adjusted.md  manual_adjusted_headings.md  manual_content_list.json  pagify.py
backend/: backend.py
chunk_viewer/: README.md  __init__.py  app.py  check_chunks.py  run.py
chunk_viewer/static/css/: style.css
chunk_viewer/static/js/: app.js
chunk_viewer/templates/: index.html  pdf_viewer.html
database/scripts/: patch.py
database/scripts/strategy/: markdown.py
database/scripts/strategy/tree/: load_tree.py  structs.py
database/storage/: chroma.sqlite3
frontend/: chunk_viewer.py  chunk_viewer_app.py  frontend.py  gui.py
frontend/static/css/: style.css
frontend/static/js/: app.js
frontend/templates/: chunk_viewer.html
scripts/: add_filename_to_existing_chunks.py
tests/: adjust_headings_and_convert_to_xml.py  process_manual.py  run_embedding.py  run_multi_embedding.py  test_rag_history.py
utils/: functions.py  get_database.py  get_model.py  metadata.py  settings.py
